# Hoxa

./: .editorconfig  .gitignore  AGENTS.md  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/api/routes/: __init__.py  goals.py  integrations.py  plans.py  progress.py  social.py  workout_logs.py  workouts.py
backend/app/core/: __init__.py  config.py
backend/app/data/: __init__.py  mock_data.py
backend/app/integrations/: __init__.py  providers.py
backend/app/repositories/: __init__.py  mock_repository.py
backend/app/schemas/: __init__.py  goal.py  integration.py  plan.py  progress.py  social.py  workout.py
backend/app/services/: __init__.py  integrations.py  planning.py  progress.py  social.py
backend/tests/: __init__.py
design/: README.md  brand-tokens.md
docs/: README.md  architecture.md  information-architecture.md  integrations-roadmap.md  mvp-roadmap.md  product-brief.md  training-engine-notes.md  user-personas.md
docs/examples/: README.md  example-training-plan.json  sample-goals.json  sample-users.json
ios-app/: README.md
ios-app/Hoxa.xcodeproj/: project.pbxproj
ios-app/Hoxa/App/: AppModel.swift  HoxaApp.swift  HoxaRootView.swift
ios-app/Hoxa/Models/: FollowingProfile.swift  Goal.swift  OnboardingQuestion.swift  ProgressMetric.swift  ProgressNote.swift  SocialActivity.swift  TrainingBlock.swift  TrainingSession.swift  (+1 more)
marketing-site/: README.md
web-app/: .env.example  README.md  eslint.config.mjs  package-lock.json  package.json
(+34 files in other folders)
